--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,58 +1,26 @@
 /* Styles */
-html, body, #root, .container-loading {
+html, body, #root {
   height: 100%;
 }
 
-#app {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #4d4d4d;
-  min-width: 550px;
-  max-width: 850px;
-  margin: 0 auto;
+input:focus {
+  outline: 0;
 }
 
-a.active {
-  color: orange;
+::-webkit-scrollbar {
+  opacity: 1;
+  height: 12px;
+  width: 10px;
+  border-radius: 4px;
+  background: white;
+  transition: all 0.42s ease;
 }
-
-nav {
-  padding-top: 20px;
+::-webkit-scrollbar-thumb {
+  background: #d1d1d1;
+  border-radius: 6px;
 }
-
-.container-loading {
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-}
-
-.loading {
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
-}
-
-.loading-row {
-  background-color: #fff;
-  min-height: 100%;
-  height: 100%;
-  display:table-cell;
-  vertical-align:middle;
-  text-align:center;
-  width: 100%;
-}
-
-.loading div {
-  width: inherit !important;
-}
-
-.loading svg {
-  display: block;
-  width: 100px;
-  margin: 0 auto;
-}
-
-.h1-loading {
-  color: #fff;
-  font-size: 6rem;
-  line-height: 8rem;
+::-webkit-scrollbar {
+  opacity: 0;
+  height: 12px;
+  width: 10px;
 }
